// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Element /> inserts styles <Element className={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      "bootstrap"
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element color="red" className={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base {
        color: red
      }
      "bootstrap"
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element color={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base {
        color: red
      }
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element color={...} hover={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base {
        color: black
      }
      CSSClass base:hover {
        color: red
      }
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element focus={...} hover={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base:focus {
        color: black
      }
      CSSClass base:hover {
        color: red
      }
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element hover={...} /> 1`] = `
<div
  Component="div"
  className={
    CSSClassJoin [
      CSSClass base:hover {
        color: red
      }
    ]
  }
/>
`;
